@@ -1,6 +1,0 @@
-#include "readlinehistory.ih"
-
-void ReadLineHistory::insert(std::ostream &out, bool useTimestamps)
-{
-    
-}
