@@ -1,3 +1,10 @@
+bobcat (2.20.01)
+
+  * Repaired bug in ReadLineBuf: object was incompletely initialized
+    resulting in intermittendly occurring segfaults.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 04 Dec 2011 21:31:12 +0100
+
 bobcat (2.20.00)
 
   * Redefined the implementations of the templates in bobcat/binops.
